--- a/1b26bd675b36c2e1b1da5d4c929a64e6b00c31bd/index.html
+++ b/1b26bd675b36c2e1b1da5d4c929a64e6b00c31bd/index.html
@@ -4,12 +4,8 @@
 <head>
 <style>
 video{
-  width: 100vw;
-  height: 100vh;
-  object-fit: contain;
-  position: fixed;
-  top: 0;
-  left: 0;
+  display: block;
+  margin: auto;
 }
 </style>
 </head>
