--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ body {
 	background: black;
 	margin: auto; 
 	padding: 8px;
+	border-width: 2px;
+	border-style: inset;
+	border-color: green
 }
 
 .lightbox {
@@ -67,6 +70,7 @@ input#password {
 	color: lightgreen;
 	border-color: green;
 	outline: none;
+	margin: 8px;
 }
 
 input#password:focus {
