--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 
 body {
 	background-color: black;
+	background-image: radial-gradient(
+		rgba(0, 150, 0, 0.75), black 120%
+	);
+	height: 100vh;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: repeating-linear-gradient(
+    0deg,
+    rgba(black, 0.15),
+    rgba(black, 0.15) 1px,
+    transparent 1px,
+    transparent 2px
+  );
 }
 
 .box {
@@ -19,7 +39,7 @@ body {
 	margin: auto; 
 	padding: 8px;
 	border-width: 2px;
-	border-style: inset;
+	border-style: outset;
 	border-color: green
 }
 
@@ -82,6 +102,7 @@ button#loginbutton {
 	color: green;
 	border-width: 2px;
 	border-color: green;
+	outline: none;
 }
 
 button#loginbutton:hover {
