--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ body {
 		rgba(0, 150, 0, 0.75), black 120%
 	);
 	height: 100vh;
+}
+
+body::after {
 	content: "";
 	position: absolute;
 	top: 0;
