--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@ body {
 		rgba(0, 150, 0, 0.75), black 120%
 	);
 	height: 100vh;
+	margin: 0;
+	overflow: hidden;
+	padding: 2rem;
+	color: white;
+	&::after {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		background: repeating-linear-gradient(
+			0deg,
+			rgba(black, 0.15),
+			rgba(black, 0.15) 1px,
+			transparent 1px,
+			transparent 2px
+		);
+	}
 }
-
-body::after {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-	background: repeating-linear-gradient(
-		0deg,
-		rgba(black, 0.15),
-		rgba(black, 0.15) 1px,
-		transparent 1px,
-		transparent 2px
-	);
-}
-
 .box {
 	background: black;
 	margin: auto; 
