--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@ button#loginbutton:active {
 
 <body>
 
-	<h1>
+	<pre>
  _                          _  _         _         
 | |_   ___  ___  ___   ___ | || |  __ _ | |_   ___ 
 | __| / _ \/ __|/ __| / _ \| || | / _` || __| / _ \
 | |_ |  __/\__ \\__ \|  __/| || || (_| || |_ |  __/
  \__| \___||___/|___/ \___||_||_| \__,_| \__| \___|
                                                    
-	</h1>
+	</pre>
 
 	<div id="loginbox" class="lightbox" >
 		<div class="horizontal">
