--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <style>
 
-body {
+body::before {
 	background-color: black;
 	background-image: radial-gradient(
 		rgba(0, 150, 0, 0.75), black 120%
@@ -22,7 +22,7 @@ body {
 	color: white;
 }
 
-body::after {
+body {
 	content: "";
 	position: absolute;
 	top: 0;
