--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@ button#loginbutton:active {
 	border-style: inset;
 }
 
+
+
 </style>
 
 <body>
 
-	<div id="companyname">
+	<div class="companyname">
 		<div class="horizontal">
 			<div class="vertical">
-				<pre>
+				<pre style="text-align: center">
  _                          _  _         _         
 | |_   ___  ___  ___   ___ | || |  __ _ | |_   ___ 
 | __| / _ \/ __|/ __| / _ \| || | / _` || __| / _ \
