--- a/index.html
+++ b/index.html
@@ -110,14 +110,16 @@ button#loginbutton:active {
 <body>
 
 	<div class="companyname">
-				<pre style="text-align: center">
+		<div class="vertical">
+			<pre style="text-align: center">
  _                          _  _         _         
 | |_   ___  ___  ___   ___ | || |  __ _ | |_   ___ 
 | __| / _ \/ __|/ __| / _ \| || | / _` || __| / _ \
 | |_ |  __/\__ \\__ \|  __/| || || (_| || |_ |  __/
  \__| \___||___/|___/ \___||_||_| \__,_| \__| \___|
                                                    
-				</pre>
+			</pre>
+		</div>
 	</div>
 
 	<div id="loginbox" class="lightbox" >
