--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -111,16 +110,16 @@ button#loginbutton:active {
 
 	<div id="loginbox" class="lightbox" >
 		<div class="horizontal">
-			<div class="vertical">
-				<pre style="text-align: center">
+			<pre style="text-align: center">
  _                          _  _         _         
 | |_   ___  ___  ___   ___ | || |  __ _ | |_   ___ 
 | __| / _ \/ __|/ __| / _ \| || | / _` || __| / _ \
 | |_ |  __/\__ \\__ \|  __/| || || (_| || |_ |  __/
  \__| \___||___/|___/ \___||_||_| \__,_| \__| \___|
                                                    
-				</pre>
-			</div>
+			</pre>
+		</div>
+		<div class="horizontal">
 			<div class="vertical">
 				<div class="box">
 					<input style="text-align: center;" id="password" type="password" placeholder="password" /> <br />
