--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@ div.horizontal {
 	justify-content: center;
 }
 
-div.horizontalgroup {
+div.column {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	height: 100%;
 }
 
