--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ button#loginbutton:active {
 <body>
 
 	<div id="loginbox" class="lightbox" >
-		<div class="horizontalgroup">
+		<div class="column">
 			<div class="horizontal">
 				<pre style="text-align: center">
  _                          _  _         _         
