--- a/1b26bd675b36c2e1b1da5d4c929a64e6b00c31bd/index.html
+++ b/1b26bd675b36c2e1b1da5d4c929a64e6b00c31bd/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html>
-
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<style>
-video{
-  display: block;
-  margin: auto;
-}
-</style>
+<title></title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
-<div class="video-container">
-    <video controls loop>
-    <source src="important.mp4"  type="video/mp4">
-</div>
+<style>
+
+video{
+	display: block;
+	margin: auto;
+}
+
+.video-container{
+	margin: auto;
+}
+
+</style>
+
+<body>
+	<div class="video-container">
+		<video controls loop>
+		<source src="important.mp4"  type="video/mp4">
+	</div>
+</body>
 
 </html>
