--- a/1b26bd675b36c2e1b1da5d4c929a64e6b00c31bd/index.html
+++ b/1b26bd675b36c2e1b1da5d4c929a64e6b00c31bd/index.html
@@ -9,13 +9,20 @@
 
 <style>
 
+body{
+	background-color: black;
+}
+
 video{
 	display: block;
 	margin: auto;
 }
 
 .video-container{
-	margin: auto;
+	left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 </style>
