--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ button#loginbutton:active {
 	<div id="loginbox" class="lightbox" >
 		<div class="column">
 			<div class="horizontal">
-				<pre style="text-align: center; font-size: 100%;">
+				<pre style="text-align: center; font-size: 1.2vmin;">
  _                          _  _         _         
 | |_   ___  ___  ___   ___ | || |  __ _ | |_   ___ 
 | __| / _ \/ __|/ __| / _ \| || | / _` || __| / _ \
