--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title></title>
+<title>Tessellate Labs</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -117,7 +117,7 @@ button#loginbutton:active {
 	<div id="loginbox" class="lightbox" >
 		<div class="column">
 			<div class="horizontal">
-				<pre style="text-align: center; font-size: 1.2vmin;">
+				<pre style="text-align: center; font-size: 2vmin;">
  _                          _  _         _         
 | |_   ___  ___  ___   ___ | || |  __ _ | |_   ___ 
 | __| / _ \/ __|/ __| / _ \| || | / _` || __| / _ \
