--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ button#loginbutton:active {
 				<div class="vertical">
 					<div class="box">
 						<input style="text-align: center;" id="password" type="password" placeholder="password" /> <br />
-						<button id="loginbutton" type="button">Enter</button>
+						<button id="loginbutton" type="button">enter</button>
 						<p id="wrongPassword" style="display: none">wrong password</p>
 					</div>
 				</div>
