--- a/1b26bd675b36c2e1b1da5d4c929a64e6b00c31bd/index.html
+++ b/1b26bd675b36c2e1b1da5d4c929a64e6b00c31bd/index.html
@@ -15,6 +15,11 @@ body{
 	background-image: radial-gradient(
 		rgba(0, 150, 0, 0.75), black 120%
 	);
+	margin: 0;
+	overflow: hidden;
+	padding: 2rem;
+	color: white;
+	height: 100vh;
 }
 
 video{
