--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Tessellate Labs</title>
 <link rel="icon" type="image/x-icon" href="tessellate.ico">
 
+<meta name="description" content="Building and scaling wireless sensor networks for the good of humanity and the world">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -132,6 +133,28 @@ button#loginbutton:active {
 						<input style="text-align: center;" id="password" type="password" placeholder="password" /> <br />
 						<button id="loginbutton" type="button">enter</button>
 						<p id="wrongPassword" style="display: none">wrong password</p>
+					</div>
+					<div class="box">
+						<form name="gform" id="gform" enctype="text/plain" action="docs link">
+							<h1>sign up for updates</h1><br><br>
+							email:<br>
+							<input type="text" name="entry.#########" id="entry.#########"><br>
+							<input type-"submit" value="submit">
+						</form>
+					</div>
+					<div class="box">
+						<form>
+							<h1>contact</h1><br><br>
+							name:<br>
+							<input type="text" name="entry.#########" id="entry.#########"><br>
+							organization:<br>
+							<input type="text" name="entry.#########" id="entry.#########"><br>
+							email:<br>
+							<input type="text" name="entry.#########" id="entry.#########"><br>
+							message:<br>
+							<input type="text" name="entry.#########" id="entry.#########"><br>
+							<input type-"submit" value="submit">
+						</form>
 					</div>
 				</div>
 			</div>
