--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ div.vertical {
   text-align: center;
 }
 
-input#password {
+input {
 	background-color: black;
 	color: lightgreen;
 	border-color: green;
@@ -88,7 +88,7 @@ input#password {
 	
 }
 
-input#password:focus {
+input:focus {
 	border-color: lightgreen;
 }
 
