--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <title>Tessellate Labs</title>
 <link rel="icon" type="image/x-icon" href="tessellate.ico">
 
-<meta name="description" content="Building and scaling wireless sensor networks for the good of humanity and the world">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -136,24 +135,24 @@ button#loginbutton:active {
 					</div>
 					<div class="box">
 						<form name="gform" id="gform" enctype="text/plain" action="docs link">
-							<h1>sign up for updates</h1><br><br>
-							email:<br>
-							<input type="text" name="entry.#########" id="entry.#########"><br>
-							<input type-"submit" value="submit">
+							sign up for updates<br><br>
+							email:
+                            <input type="text" name="entry.#########" id="entry.#########"><br>
+							<input type="submit" value="submit">
 						</form>
 					</div>
 					<div class="box">
 						<form>
-							<h1>contact</h1><br><br>
-							name:<br>
+							contact<br><br>
+							name:
 							<input type="text" name="entry.#########" id="entry.#########"><br>
-							organization:<br>
+							organization:
 							<input type="text" name="entry.#########" id="entry.#########"><br>
-							email:<br>
+							email:
 							<input type="text" name="entry.#########" id="entry.#########"><br>
-							message:<br>
+							message:
 							<input type="text" name="entry.#########" id="entry.#########"><br>
-							<input type-"submit" value="submit">
+							<input type="submit" value="submit">
 						</form>
 					</div>
 				</div>
