--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ button#loginbutton:active {
 					</div>
 					<div class="box">
 						<form name="gform" id="gform" enctype="text/plain" action="docs link">
-							sign up for updates<br><br>
+							sign up for updates<br>
 							email:
                             <input type="text" name="entry.#########" id="entry.#########"><br>
 							<input type="submit" value="submit">
@@ -143,7 +143,7 @@ button#loginbutton:active {
 					</div>
 					<div class="box">
 						<form>
-							contact<br><br>
+							contact<br>
 							name:
 							<input type="text" name="entry.#########" id="entry.#########"><br>
 							organization:
