--- a/index.html
+++ b/index.html
@@ -143,27 +143,26 @@ button#loginbutton:active {
 						</form>
 					</div>
 					<div class="box">
-						<form>
+						<form name="gform2" id="gform2" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSd7GBGg-ACTFuVSoB7ToVXfI6rfAMtpRwBLPVJHhySXoURoFg/formresponse?" target="hidden_iframe" onsubmit="submitted=true;">
 							contact<br>
                             <div class="vertical">
-                            	<div class="horizontal">
-                                	<p>name</p>
-									<input type="text" name="entry.#########" id="entry.#########"><br>
+                            	<div>
+                                	<label for="entry.437661451">name:</label>
+									<input type="text" name="entry.437661451" id="entry.437661451"><br>
+                                <div>
+                                	<label for="entry.2124189112">organization:</label>
+									<input type="text" name="entry.2124189112" id="entry.2124189112"><br>
                                 </div>
-                                <div class="horizontal">
-                                	<p>organization:</p>
-									<input type="text" name="entry.#########" id="entry.#########"><br>
+                                <div>
+                                	<label for="entry.1818372476">email:</label>
+									<input type="text" name="entry.1818372476" id="entry.1818372476"><br>
                                 </div>
-                                <div class="horizontal">
-                                	<p>email:</p>
-									<input type="text" name="entry.#########" id="entry.#########"><br>
+                                <div>
+                                	<label for="entry.1620713003">message:</label>
+									<input type="text" name="entry.1620713003" id="entry.1620713003"><br>
                                 </div>
-                                <div class="horizontal">
-                                	<p>message:</p>
-									<input type="text" name="entry.#########" id="entry.#########"><br>
-                                </div>
+                            <input type="submit" value="submit">
                             </div>
-							<input type="submit" value="submit">
 						</form>
 					</div>
 				</div>
