--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ body {
 .box {
 	background: black;
 	margin: auto; 
-    margin-top: 10px;
-  	margin-bottom: 10px;
+    margin-top: 0;
+  	margin-bottom: 20px;
 	padding: 8px;
 	border-width: 2px;
 	border-style: outset;
