--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ body {
 
 .box {
 	background: black;
-	margin: auto; 
-    margin-top: 0;
+	margin: auto;
   	margin-bottom: 20px;
 	padding: 8px;
 	border-width: 2px;
@@ -67,16 +66,19 @@ div.vertical {
   color: green;
   opacity: 1;
   text-align: center;
+  font-family: 'Courier New', monospace;
 }
 
 :-ms-input-placeholder {
   color: green;
   text-align: center;
+  font-family: 'Courier New', monospace;
 }
 
 ::-ms-input-placeholder {
   color: green;
   text-align: center;
+  font-family: 'Courier New', monospace;
 }
 
 input {
@@ -98,6 +100,7 @@ input:focus {
 	border-width: 2px;
 	border-color: green;
 	outline: none;
+    font-family: 'Courier New', monospace;
 }
 
 #button:hover {
