--- a/index.html
+++ b/index.html
@@ -158,17 +158,18 @@ input {
 					</div>
 					<div class="box">
                     	<p class="formtitlesubmit">sign up for updates</p>
-						<form name="gform1" id="gform1" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSe9Mp9V8OvbHLjt_gfYgw1FuMlhaiaxlzmBjl0WKUdX5wiQtg/formResponse?" target="hidden_iframe" onsubmit="submitted1=true">
+						<form name="gform1" id="gform1" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSe9Mp9V8OvbHLjt_gfYgw1FuMlhaiaxlzmBjl0WKUdX5wiQtg/formResponse?" target="hidden_iframe1" onsubmit="submitted1=true">
 							<p class="forminput">
                             	<label for="entry.853458270">email:</label>
                             	<input type="text" name="entry.853458270" id="entry.853458270"><br>
                             </p>
 						</form>
+                        <iframe name="hidden_iframe1" id="hidden_iframe1" style="display:none;" onload="if(submitted1) {}"></iframe>
                         <p class="formtitlesubmit"><input type="submit" id="button" value="submit"></p>
 					</div>
 					<div class="box">
                     	<p class="formtitlesubmit"><td colspan="100%">contact</td></p>
-						<form name="gform2" id="gform2" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSd7GBGg-ACTFuVSoB7ToVXfI6rfAMtpRwBLPVJHhySXoURoFg/formResponse?" target="hidden_iframe" onsubmit="submitted2=true;">
+						<form name="gform2" id="gform2" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSd7GBGg-ACTFuVSoB7ToVXfI6rfAMtpRwBLPVJHhySXoURoFg/formResponse?" target="hidden_iframe2" onsubmit="submitted2=true;">
                           <p class="forminput">
                             <label for="entry.437661451">name:</label>
                             <input type="text" name="entry.437661451" id="entry.437661451" required><br>
@@ -186,6 +187,7 @@ input {
                             <input type="text" name="entry.1620713003" id="entry.1620713003" required><br>
                           </p>
 						</form>
+                        <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted2) {}"></iframe>
                         <p class="formtitlesubmit"><input type="submit" id="button" value="submit"></p>
 					</div>
 				</div>
