--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ input {
 <body>
 
 	<div id="loginbox" class="lightbox" >
-		<div class="column">
+		<div class="vertical">
 			<div class="horizontal">
 				<pre style="text-align: center; font-size: 2vmin;">
  _                          _  _         _         
