--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ input {
 	<div id="loginbox" class="lightbox" >
 		<div class="column">
 			<div class="horizontal">
-				<pre style="text-align: center; font-size: 2vmin;">
+				<pre style="text-align: center; font-size: 2vmin; margin: 0;">
  _                          _  _         _         
 | |_   ___  ___  ___   ___ | || |  __ _ | |_   ___ 
 | __| / _ \/ __|/ __| / _ \| || | / _` || __| / _ \
