--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="icon" type="image/x-icon" href="tessellate.ico">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Building and scaling wireless sensor networks for the good of humanity and the world">
 
 </head>
 
@@ -94,29 +95,26 @@ input:focus {
 	border-color: lightgreen;
 }
 
-#button {
+.button {
 	background-color: black;
 	color: green;
 	border-width: 2px;
 	border-color: green;
 	outline: none;
     font-family: 'Courier New', monospace;
+    margin: 5px;
 }
 
-#button:hover {
+.button:hover {
 	color: lightgreen;
 	border-color: lightgreen;
 }
 
-#button:active {
+.button:active {
 	border-style: inset;
 }
 
 .formtitle {
-	margin: 0;
-}
-
-.formsubmit {
 	margin: 0;
 }
 
@@ -134,6 +132,11 @@ input {
 }
 
 </style>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script type="text/javascript">var submitted1=false;</script>
+<script type="text/javascript">var submitted2=false;</script>
 
 <body>
 
@@ -153,17 +156,17 @@ input {
 				<div class="vertical">
 					<div class="box">
 						<input style="text-align: center;" id="password" type="password" placeholder="password" /> <br />
-						<button id="button" type="button">enter</button>
+						<button class="button" type="button">enter</button>
 						<p id="wrongPassword" style="display: none">wrong password</p>
 					</div>
 					<div class="box">
                     	<p class="formtitle">sign up for updates</p>
-						<form name="gform1" id="gform1" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSe9Mp9V8OvbHLjt_gfYgw1FuMlhaiaxlzmBjl0WKUdX5wiQtg/formResponse?" target="hidden_iframe1" onsubmit="submitted1=true">
+						<form name="gform1" id="gform1" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSe9Mp9V8OvbHLjt_gfYgw1FuMlhaiaxlzmBjl0WKUdX5wiQtg/formResponse?" target="hidden_iframe1" onsubmit="submitted1=true;">
 							<p class="forminput">
                             	<label for="entry.853458270">email:</label>
                             	<input type="text" name="entry.853458270" id="entry.853458270"><br>
                             </p>
-                            <p class="formsubmit"><input type="submit" id="button" value="submit"></p>
+                            <input type="submit" class="button" value="submit">
 						</form>
                         <iframe name="hidden_iframe1" id="hidden_iframe1" style="display:none;" onload="if(submitted1) {}"></iframe>
 					</div>
@@ -186,7 +189,7 @@ input {
                             <label for="entry.1620713003">message:</label>
                             <input type="text" name="entry.1620713003" id="entry.1620713003" required><br>
                           </p>
-                          <p class="formsubmit"><input type="submit" id="button" value="submit"></p>
+                          <input type="submit" class="button" value="submit">
 						</form>
                         <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted2) {}"></iframe>
 					</div>
@@ -195,19 +198,12 @@ input {
 		</div>
 	</div>
 
-
-
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-	<script type="text/javascript">var submitted1=false;</script>
     <script type="text/javascript">
     $('#gform1').on('submit', function(e) {
       $('#gform1 *').remove();
       $('#gform1').prepend('<br>your submission has been processed...').fadeIn(2000);
       });
     </script>
-    
-    <script type="text/javascript">var submitted2=false;</script>
     <script type="text/javascript">
     $('#gform2').on('submit', function(e) {
       $('#gform2 *').remove();
